linuxmuster-linbo (2.4.2-1) lmn7; urgency=low

  * fix #165: linbo_cmd function to list all images in cache.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 27 Jan 2021 21:51:25 +0100

linuxmuster-linbo (2.4.2-0) lmn7; urgency=low

  * fix #163: Linbo manipulates start.conf.
  * implemented codename.
  * fix #164: implemented plymouth boot splash (for 64bit versions only).
  * fix linbo_wallpaper handling due to plymouth stuff (#164).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 27 Jan 2021 14:45:18 +0100

linuxmuster-linbo (2.4.1-0) lmn7; urgency=low

  * linbo_cmd, register(): implemented device role (see https://github.com/linuxmuster/linuxmuster-linbo-gui/issues/7).
  * fix #155: linbo_cmd, added functions netmask and bitmask.
  * fix #157: offline boot on efi systems boots last booted os.
  * fix #158: Gui is not loaded from cache in offline mode.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 11 Dec 2020 17:56:57 +0100

linuxmuster-linbo (2.4.0-0) lmn7; urgency=low

  * fix #147: implemented logging image status of client.
  * more english translations of console messages and further code beautifying.
  * fix #141: linbo manipulating the local start.conf when finding labels with same name.
  * fix #142: added start.conf examples for Ubuntu 20.04 with correct kernel and initrd paths.
  * fix #139: improved error handling in linbo_wrapper, linbo_cmd and linbo-remote.
  * fix #146: PID of screen launched (lmn7 only).
  * fix #148: linbo-remote, handling of clients with dynamic ip (lmn7 only).
  * fix #149: linbo_gui on demand.
  * fix #150: Additional grub menu option "Start with Linbo".
  * minor linbo grub theme improvements.
  * fixed kernel and initrd paths and linbo menu class in remaining grub config templates.
  * fix #153: Extend linbo clients ssh authorized_keys.
  * fix #152: Linbo should not reboot on update in all cases.
  * fix #154: New linbo_gui (lmn7 only).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 07 Dec 2020 18:17:06 +0100